--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Homepage</h1>
+<!DOCTYPE html>
+<html>
+<head>
+   <title>Home</title>
+   <link rel="stylesheet" href="css/homepage.css">
+</head>
+
+<body>
+  <div class="home">Here</div>
+</body>
+
+</html>
