--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    <link rel="stylesheet" href="css/homepage.css">
 </head>
 
-<body>
-  <div class="home">Here</div>
+<body class="home">
+  <div>Here</div>
 </body>
 
 </html>
