--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 </head>
 
 <body>
-   <div class="half-image"></div>
+   <main>
+      <div class="half--right half__content">
+      <h1 class="pageTitle">Professor</h1>
+      <p class="pageContent">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras mattis consectetur purus sit amet fermentum. 
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis consectetur purus sit amet fermentum.</p>
+</div>
+</div>
+      <div class="half-image"></div>
+   </main>
 </body>
 
 </html>
